<?xml version="1.0"?>
<package>
  <name>agv_mecanum_teleop</name>
  <version>0.0.0</version>
  <description>Generic keyboard teleop for twist robots.</description>

  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>Graylin Trevor Jay</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
